# ExampleCmakeQtLibrary

./: CMakeLists.txt  MyLibConfig.cmake  README  myclass.cpp  myclass.h
includes/: MyClass
